<resources>
    <string name="app_name">CatalogoOnline</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wru_search">¿Qué estás buscando?</string>
    <string name="search_now">Buscar</string>
    <string name="prod_title">Título:</string>
    <string name="prod_price">Precio:</string>
    <string name="prod_currency">Moneda:</string>
    <string name="prod_accept_mercado_pago">¿Acepta Mercado Pago?</string>
    <string name="prod_isNew">¿Es nuevo?</string>
    <string name="prod_location">Ubicación:</string>
    <string name="currency_pesos">$%1$s</string>
    <string name="coma">%1$s, %2$s </string>
    <string name="no_products_founded">No hay productos para la búsqueda seleccionada.</string>
    <string name="product_img">Image</string>
    <string name="what_ru_search">¡Buscá tu próximo producto!</string>
    <string name="what_dou_like">¿Cuál te gusta?</string>
    <string name="product_detail">Detalle del producto</string>
</resources>