<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FrgProductDetail">

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/product_img"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/marginMedium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/prod_title"
                style="@style/tvs_detail_product"
                app:layout_constraintStart_toStartOf="parent"
                />
            <TextView
                android:id="@+id/tv_prod_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/marginMedium"
                />
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_prod_title"
                android:text="@string/prod_price"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/tvs_detail_product"/>
            <TextView
                android:id="@+id/tv_prod_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tv_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_price"
                app:layout_constraintBottom_toTopOf="@id/tv_mp"
                android:text="@string/prod_currency"
                style="@style/tvs_detail_product"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tv_prod_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_currency"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tv_mp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_prod_currency"
                android:text="@string/prod_accept_mercado_pago"
                style="@style/tvs_detail_product_margin"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_prod_mp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:paddingStart="@dimen/marginMedium"
                app:layout_constraintBottom_toBottomOf="@+id/tv_mp"
                app:layout_constraintStart_toEndOf="@id/tv_mp"
                app:layout_constraintTop_toTopOf="@id/tv_mp" />

            <TextView
                android:id="@+id/tv_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_mp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/prod_isNew"
                style="@style/tvs_detail_product_margin"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_prod_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:paddingStart="@dimen/marginMedium"
                app:layout_constraintBottom_toBottomOf="@+id/tv_condition"
                app:layout_constraintStart_toEndOf="@id/tv_condition"
                app:layout_constraintTop_toTopOf="@id/tv_condition" />
            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prod_location"
                style="@style/tvs_detail_product"
                app:layout_constraintTop_toBottomOf="@id/sw_prod_condition"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tv_prod_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_city"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>